--- a/style.css
+++ b/style.css
@@ -111,7 +111,6 @@ nav {
 /* hero section  */
 .videos {
   object-fit: cover;
-  overflow: hidden;
   position: absolute;
   height: 100vh;
   width: 100%;
@@ -123,6 +122,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   height: 100vh;
 }
 .textcont {
@@ -170,7 +170,7 @@ nav {
 }
 .imgcont img {
   width: 40%;
-  border-radius: 50%;
+  border-radius: 70%;
   filter: contrast(110%);
 }
 .biography {
@@ -194,7 +194,7 @@ nav {
   text-align: justify;
   width: 90%;
 }
-.skills{
+.skills {
   margin-left: 20px;
 }
 .skills h2 {
@@ -690,7 +690,9 @@ nav {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  position: relative;
 }
+
 #inp1 {
   width: 90%;
   height: 50px;
@@ -1074,7 +1076,7 @@ nav {
   }
   /* bottom section styling */
   .imgcont img {
-    width: 30%;
+    width: 60%;
   }
   .bottommain {
     display: flex;
@@ -1194,7 +1196,7 @@ nav {
   }
   .recent1 p {
     font-size: 1.1rem;
-    width: 90%;
+    width: 85%;
     text-align: justify;
   }
   .recent1 {
